--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,32 @@
 {
   "name": "andrey-kunitsyn/product-catalog-api",
   "description": "REST API for product catalog with Elasticsearch and DaData integration",
+  "version": "0.1.0",
   "type": "project",
   "require": {
-    "php": "8.4",
+    "php": ">=8.4",
     "ext-pdo": "*",
-    "guzzlehttp/guzzle": "7.5",
-    "vlucas/phpdotenv": "5.4",
-    "elasticsearch/elasticsearch": "8.0"
+    "doctrine/annotations": "^2.0",
+    "doctrine/collections": "^2.3",
+    "doctrine/data-fixtures": "^1.7",
+    "doctrine/dbal": "^4.0",
+    "doctrine/migrations": "^3.8",
+    "doctrine/orm": "^3.0",
+    "doctrine/persistence": "^3.4",
+    "elasticsearch/elasticsearch": "8.0",
+    "guzzlehttp/guzzle": "7.10",
+    "laminas/laminas-diactoros": "^3.0",
+    "league/route": "^5.0",
+    "php-di/php-di": "^7.0",
+    "psr/container": "^2.0",
+    "psr/http-message": "^1.1",
+    "psr/log": "^3.0",
+    "psr/simple-cache": "^1.0",
+    "symfony/cache": "^7.0",
+    "symfony/console": "^7.0",
+    "symfony/dotenv": "^7.3",
+    "symfony/serializer": "^7.3",
+    "symfony/validator": "^7.3"
   },
   "require-dev": {
     "phpunit/phpunit": "10.0",
@@ -15,8 +34,7 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "src/App/",
-      "CLI\\": "src/CLI/"
+      "App\\": "src/"
     }
   },
   "autoload-dev": {
@@ -27,12 +45,28 @@
   "scripts": {
     "test": "phpunit",
     "test-coverage": "phpunit --coverage-html coverage",
-    "analyze": "phpstan analyze src --level=7"
+    "analyze": "phpstan analyze src --level=7",
+    "migrate": "php bin/console migrations:migrate",
+    "migrate:create": "php bin/console migrations:generate",
+    "migrate:rollback": "php bin/console migrations:migrate prev",
+    "migrate:status": "php bin/console migrations:status",
+    "migrate:diff": "php bin/console migrations:diff",
+    "orm:schema:create": "php bin/console orm:schema-tool:create",
+    "orm:schema:update": "php bin/console orm:schema-tool:update --force",
+    "orm:schema:drop": "php bin/console orm:schema-tool:drop --force",
+    "orm:generate:entities": "php bin/console orm:generate:entities src/Entity",
+    "orm:generate:proxies": "php bin/console orm:generate:proxies",
+    "fixtures:load": "php bin/console doctrine:fixtures:load",
+    "fixtures:info": "php bin/console doctrine:fixtures:info",
+    "db:purge": "php bin/console doctrine:database:purge"
   },
   "config": {
     "optimize-autoloader": true,
     "preferred-install": "dist",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
   },
   "minimum-stability": "stable",
   "prefer-stable": true
