--- a/compose.yaml
+++ b/compose.yaml
@@ -57,8 +57,14 @@ services:
     ports:
       - "9200:9200"
       - "9300:9300"
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     volumes:
       - es_data:/usr/share/elasticsearch/data
+    networks:
+      - app-network
 
 volumes:
   mysql_data:
